# project_data_analytics

./: .gitignore  Dockerfile  config.yaml  forecast_chronos_bolt.py  forecast_morai.py  forecast_nbeatsx.py  outlier_detection.py  pyproject.toml  requirements.txt
data/forecasts/: chronos_bolt_forecast.parquet  deepl_forecast.parquet  lgbm_covid_forecast.parquet  lgbm_forecast.parquet  lightgmb.parquet  lightgmb_forecast.parquet  morai_forecast.parquet  nbeatsx_forecast.parquet  stats_forecast.parquet
data/gold/: historical_volume_gold.parquet  lgbm_covid_feat_importance.parquet  ratio_vol_prod_gold.parquet  ratio_vol_prod_gold_no_outliers.parquet  seasonal_feat_gold.parquet  timeseries_gold.parquet
data/raw/bronze/: historical_volume_bronze.parquet  monthly_covid_rate_per_country.parquet  production_plannig.parquet
data/silver/: historical_volume_silver.parquet  monthly_covid_rate_per_country.parquet  production_plannig_silver.parquet
models/: lgbm_covid_forecast.pkl  lgbm_forecast.pkl  lightgbm.pkl  stats_forecast.pkl
notebooks/: draft-analysis.ipynb  test_llm.ipynb
references/: project-proposal.ipynb  topic-ideas.ipynb
reports/: README.md  report.html  report.ipynb
requirements/: morai_requirements.txt  requirements.txt
src/: data_preprocessing.py  feature_eng.py  main.py  models.py  plotting.py  project_imports.py  utils.py
