[tool.poetry]
name = "Project inbound logistics forecasting"
version = "0.1.0"
description = "Dockerconainer for inbound logistics forecasting project"
authors = ["John Torres <jt072@hdm-stuttgart.de>"]
readme = "README.md"

[[tool.poetry.source]]
name = "official_pypi"
url = "https://pypi.org/simple"
default = true

[tool.poetry.dependencies]
python = "^3.12"
neuralforecast = "1.7.6" 
pandas = "2.2.3"
pre-commit = "3.3.3"
jupyterlab= "4.2.5"
matplotlib= "3.9.2"
seaborn="0.13.2"
chronos= "0.3"
lightgbm="4.5.0"
optuna="4.1.0"
statsforecast="2.0.0"
statsmodels="0.14.4"
scikit-learn="1.5.2"
pyarrow="18.1.0"
tabulate="0.9.0"


[tool.poetry.dev-dependencies]
pytest = "^6.0.0"
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"